fixup! Saml artifact and remove multi-project override